postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: explorandija
spec:
  ports:
    - port: 5432
  clusterIP: None
  selector:
    app: db
